--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
   </div>
   <!-- メイン -->
   <div id="main">
-    <h1>HELLO WORLD</h1>
-    <p>
-      TESTESTESTEN!
-    </p>
+    <div id="main_box">
+      <div id="main_text">
+        <h1>HELLO WORLD</h1>
+        <p>
+          TESTESTESTEN!
+        </p>
+      </div>
+    </div>
   </div>
-  <div class="no-display">
-    <div id="menu">
+  <!--メニュー-->
+  <div id="menu">
+    <div id="menu_navi">
       <ul>
         <li><a href="#">HOME</a></li>
         <li><a href="#">PROFILE</a></li>
